
Improvements:

    - A soft link to vvtest and a config directory can now be used (without
      using the vvtest_bootstrap.py mechanism).

    - Including files into test headers (a.k.a, inserting directive files)
      can now have testname, platform, and option attributes. For example,

          #VVT: include (testname=foo) : afile.txt
          #VVT: include (platform="Linux or XBox") : bfile.txt
          #VVT: include (option="dbg and not gprof") : cfile.txt

    - The "insert directive file" now has an alias, "include". For example,
      this will insert the file "myfile.txt" during directive processing:

          #VVT: include : myfile.txt

    - The keywords specification in a test header can now use the "parameters"
      attribute, such as

          #VVT: keywords (parameters="np=1") : fast
          #VVT: keywords (parameters="np=8") : long

      In effect, keywords can be set according to the parameters in the test.

    - A test can now define the number of resources using the 'nnode' parameter.
      For example,

          #VVT: parameterize : nnode = 1 2 4

      A test instance with nnode=1 will occupy a single compute node on a
      batched system or the whole workstation in direct mode. A test with
      nnode=2 will occupy two compute nodes.

      Note that for tests that specify 'nnode' but not 'np', there will still
      be an 'np' variable set in the vvtest_util.py file for each test.
      Similarly for 'ndevice' if the machine has devices.

    - Add handling of a VVTEST_PLATFORM environment variable in the
      config/idplatform.py configuration script.  Now if that environment
      variable is defined, then the value is used as the platform name.

    - Unknown attributes in *.vvt header file directives now cause a parse
      failure.

    - Add test parameter substitution in "depends on" patterns. Consider a test
      with the following directives:

          #VVT: parameterize : toy = ball doll